--- a/troisdaccord/style.css
+++ b/troisdaccord/style.css
@@ -1372,7 +1372,7 @@ ul li {
   font-weight: 600;
   line-height: 1.8;
   font-size: 1.1rem;
-  z-index: 100 !important;
+  z-index: 2 !important;
 }
 
 .section-accueil-wrapper .btn-placer {
@@ -1391,7 +1391,7 @@ ul li {
   width: 100%;
   height: 100%;
   text-decoration: none;
-  z-index: 999;
+  z-index: 2;
   color: black;
 }
 
@@ -1423,7 +1423,7 @@ ul li {
 .section-accueil-wrapper:first-of-type .txt-btn-accueil {
   position: relative;
   height: 100%;
-  z-index: 999;
+  z-index: 2;
 }
 
 .section-accueil-wrapper:first-of-type .wp-block-columns {
@@ -1484,7 +1484,7 @@ ul li {
 
 .section-accueil-wrapper:nth-of-type(2) img {
   position: relative;
-  z-index: 9999;
+  z-index: 2;
   box-shadow: -16px 16px 0px 5px rgba(0, 0, 0, 0.561);
   transition: 0.5s ease;
 }
@@ -1494,7 +1494,7 @@ ul li {
   right: 0px;
   bottom: 0px;
   width: 50%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .section-accueil-wrapper:nth-of-type(2) svg .cls-1 {
@@ -1525,7 +1525,7 @@ ul li {
   width: 70%;
   text-align: right;
   height: 40%;
-  z-index: 1000;
+  z-index: 2;
 }
 
 .section-accueil-wrapper:nth-of-type(2) .content-section-accueil .txt-title-accueil p {
@@ -1541,7 +1541,7 @@ ul li {
 }
 
 .section-accueil-wrapper:nth-of-type(2) .btn-placer button {
-  z-index: 1001;
+  z-index: 2;
   position: absolute;
   right: 50px;
   top: 45%;
@@ -1618,7 +1618,7 @@ ul li {
 
 .section-accueil-wrapper:nth-of-type(4) .content-section-accueil .wp-block-image img {
   position: relative;
-  z-index: 9999;
+  z-index: 2;
   box-shadow: -16px 16px 0px 5px rgba(0, 0, 0, 0.561);
   transition: 0.5s ease;
   max-width: 100%;
@@ -1732,7 +1732,7 @@ ul li {
 
 .section-accueil-wrapper:nth-of-type(3) .content-section-accueil .wp-block-image img, .section-accueil-wrapper:nth-of-type(5) .content-section-accueil .wp-block-image img {
   position: relative;
-  z-index: 9999;
+  z-index: 2;
   box-shadow: -16px 16px 0px 5px rgba(0, 0, 0, 0.561);
   transition: 0.5s ease;
   max-width: 100%;
